<resources>
    //Keshan
    <string name="app_name">Govi Aswanna</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="rememberme">Remember me</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="fullname">Full Name</string>
    <string name="nic">NIC</string>
    <string name="accounttype">Account Type</string>
    <string name="phone">Phone</string>
    <string name="accountavailable">Already have an Account?</string>
    <string name="exphone">0712345678</string>
    <string name="exemail">email@gmail.com</string>
    <string name="address">Address</string>
    <string name="exaddress">12/A, Walana, Panadura</string>
    <string name="confirmchanges">Confirm Changes</string>
    <string name="cancel">Cancel</string>
    <string name="logoutarrow">Log Out</string>
    <string name="updateaccount">Update Account</string>
    <string name="backarrow">Back Arrow</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="browse">Browse</string>
    <string name="inventory">Inventory</string>
    <string name="userProfile">Profile</string>
    <string name="help">Help</string>
    <string name="accountDelete">Delete Account</string>

    //Heshan


    //
    <string name="head2">Market Place Management System</string>
    <string name="btn_home1">Add Market</string>
    <string name="btn_home2">View Market</string>

    //
    <string name="text1">Enter Food Name</string>
    <string name="text2">Enter Quantity (kg)</string>
    <string name="text3">Enter Price</string>
    <string name="text4">Enter Saller Name</string>
    <string name="btn1">Sale</string>

    //
    <string name="head1">View Market Item</string>
    <string name="view1">Food ID</string>
    <string name="view2">Food Type</string>
    <string name="view3">Food Name</string>
    <string name="view4">Food Quantity</string>
    <string name="view5">Food Price</string>
    <string name="view6">Saller</string>
    <string name="btn2">UPDATE</string>
    <string name="btn3">DELETE</string>

    <string name="btn_update">Update Data</string>


    <string-array name="account_types">
        <item>Select Account Type</item>
        <item>Buyer</item>
        <item>Farmer</item>
    </string-array>




</resources>