<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/etFoodName"
        android:layout_width="393dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etqty"
        android:layout_width="391dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text2" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="394dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text3"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1fd655"
        android:textColor="@color/black"
        android:text="@string/btn_update" />


</LinearLayout>
