<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/backarrow"
            android:src="@drawable/baseline_arrow_back_24_um" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/userProfile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/logoutarrow"
            android:src="@drawable/baseline_logout_24_um" />

    </LinearLayout>

    <View
        android:layout_below="@id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>


</LinearLayout>