<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.InsertionActivity">




    <EditText
        android:id="@+id/etFoodName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/text1"
        android:background="@drawable/input_layout_mp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etqty"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text2"
        android:background="@drawable/input_layout_mp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFoodName" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text3"
        android:background="@drawable/input_layout_mp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etqty" />


    <EditText
        android:id="@+id/etsaller"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"

        android:ems="10"
        android:hint="@string/text4"
        android:background="@drawable/input_layout_mp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:backgroundTint="@color/sale_color"
        android:text="@string/btn1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Select an option from the list"/>


</androidx.constraintlayout.widget.ConstraintLayout>