<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/logo_um"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#100F0F"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Spinner
        android:id="@+id/accountTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/account_type_um"
        android:drawablePadding="10dp"
        android:prompt="@string/accounttype"
        android:spinnerMode="dropdown" />


    <EditText
        android:id="@+id/logInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/roundemail_um"
        android:drawableStart="@drawable/baseline_email_24_um"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"/>

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/roundemail_um"
        android:drawableStart="@drawable/baseline_lock_24_um"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberme"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:buttonTint="@color/main_green"
            android:checked="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/baseline_lock_open_24_um"
            android:drawablePadding="6dp"
            android:padding="4dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="1dp"
            android:backgroundTint="@color/main_green"
            android:textSize="17sp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="Log in" />

        <Button
            android:id="@+id/signupNav"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_green"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginEnd="1dp"
            android:text="Sign up" />
    </LinearLayout>


</LinearLayout>