<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/purple_500"
    tools:context=".activities.HomeActivity">

    <View
        android:id="@+id/textView"
        android:layout_width="416dp"
        android:layout_height="104dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/homeround"
        android:gravity="center"
        android:text="@string/head2"
        android:textSize="28sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsertData"
        android:layout_width="160dp"
        android:layout_height="146dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="#1fd655"
        android:text="@string/btn_home1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnFetchData"
        android:layout_width="147dp"
        android:layout_height="142dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="-1250dp"
        android:backgroundTint="#1fd655"
        android:text="@string/btn_home2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="397dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:text="@string/head2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/market_stand_mp" />

</androidx.constraintlayout.widget.ConstraintLayout>